			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

================================
VERSION 5.5.25 (August 05, 2005)
================================

  * ADDED: thread_initialization/1, as a per-thread version of
    inititialization/1.

  * FIXED: loading library(chr).  Mike Elston.


================================
VERSION 5.5.24 (August 04, 2005)
================================

  * ADDED: documented in_pce_thread/1.

  * MODIFIED: Operator ambiguity resolution, preferring prefix over
    infix.  Sentences of the form "pre inpre atom" are read as
    pre(inpre(atom)) instead of inpre(pre, atom) if both interpretations
    are allowed.  This is the de-facto standard, tested on SICStus,
    GNU, YAP and Ciao.  Needed for lptp (www.inf.ethz.ch/~staerk/lptp.html)
    After comments from various people, including Bart Demoen and 
    Joachim Schimpf.

  * FIXED: format/3: rubber handling error printing numeric values.

  * FIXED: Bug#73: honour char_conversion flag.  Holger Kanwischer.

  * FIXED: CanoniseDir() caching issues for absolute_file_name/[2,3].
    Wim Delvaux.

  * PORT: Bug#70: Use inttypes.h instead of stdint.h for portability.
    Andreas Vögele.

  * FIXED: atom_concat(X, a, a).  Mike Elston.

  * FIXED: Added two missing CHR files to the Windows installer.  Mike
    Elston.  Replaced the w32pl5523.exe installer on July 26.  Source
    update of MS-Windows makefiles and installer-generator will be in
    5.5.24.


==============================
VERSION 5.5.23 (July 24, 2005)
==============================

  * ENHANCED: add readline.so/dll to the clib package and make
    library(readutil) decide at runtime to use the foreign or Prolog
    implementation.

  * ENHANCED: Handle incomplete .QLF files through print_message/2.
