@@ -7,6 +7,8 @@
 					http://gollem.science.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: PL_get_chars() to revert to write if CVT_WRITE is provided.
+
 ================================
 VERSION 5.5.25 (August 05, 2005)
 ================================
@@ -15,7 +17,6 @@ VERSION 5.5.25 (August 05, 2005)
     inititialization/1.
 
   * FIXED: loading library(chr).  Mike Elston.
-
 
 ================================
 VERSION 5.5.24 (August 04, 2005)
